<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.DetailMovie">

    <data>

        <variable
            name="movie"
            type="com.example.movie_app.model.MovieDetails" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".view.DetailMovie">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guide_overview_start"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.15" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guide_overview_end"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.85" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guide_start"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.05" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guide_end"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.95" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ProgressBar
                    android:id="@+id/movie_progress_Bar"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/movie_txt_Error"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/txt_error"
                    android:visibility="gone" />

            </LinearLayout>


            <ImageView
                android:id="@+id/movie_img_poster"
                android:layout_width="match_parent"
                android:layout_height="700dp"
                android:contentDescription="@string/txt_movie_img"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_detail_img"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/movie_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@{movie.title}"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/guide_start"
                app:layout_constraintTop_toBottomOf="@id/movie_img_poster" />

            <TextView
                android:id="@+id/movie_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@{movie.tagline}"
                app:layout_constraintStart_toStartOf="@id/guide_start"
                app:layout_constraintTop_toBottomOf="@id/movie_name"  />

            <TextView
                android:id="@+id/txt_information"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:text="@string/txt_movie_information"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/guide_start"
                app:layout_constraintTop_toBottomOf="@id/movie_subtitle"/>

            <TextView
                android:id="@+id/txt_opening_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/txt_opening_date"
                app:layout_constraintStart_toStartOf="@id/guide_start"
                app:layout_constraintTop_toBottomOf="@id/txt_information" />

            <TextView
                android:id="@+id/movie_open_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:text="@{movie.releaseDate}"
                app:layout_constraintStart_toEndOf="@id/txt_opening_date"
                app:layout_constraintTop_toBottomOf="@id/txt_information"/>

            <TextView
                android:id="@+id/txt_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/txt_rating"
                app:layout_constraintStart_toStartOf="@id/guide_start"
                app:layout_constraintTop_toBottomOf="@id/txt_opening_date"/>

            <TextView
                android:id="@+id/movie_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:text="@{Double.toString(movie.rating)}"
                app:layout_constraintStart_toEndOf="@id/txt_rating"
                app:layout_constraintTop_toBottomOf="@id/txt_opening_date" />

            <TextView
                android:id="@+id/txt_runtime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/txt_runtime"
                app:layout_constraintStart_toStartOf="@id/guide_start"
                app:layout_constraintTop_toBottomOf="@id/movie_rating"/>

            <TextView
                android:id="@+id/movie_runtime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:text="@{Integer.toString(movie.runtime)}"
                app:layout_constraintStart_toEndOf="@id/txt_runtime"
                app:layout_constraintTop_toBottomOf="@id/movie_rating"/>

            <TextView
                android:id="@+id/txt_budget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/txt_budget"
                app:layout_constraintStart_toStartOf="@id/guide_start"
                app:layout_constraintTop_toBottomOf="@id/movie_runtime"/>

            <TextView
                android:id="@+id/movie_budget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:text="@{Integer.toString(movie.budget)}"
                app:layout_constraintStart_toEndOf="@id/txt_budget"
                app:layout_constraintTop_toBottomOf="@id/movie_runtime"/>

            <TextView
                android:id="@+id/txt_revenue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/txt_revenue"
                app:layout_constraintStart_toStartOf="@id/guide_start"
                app:layout_constraintTop_toBottomOf="@id/movie_budget"/>

            <TextView
                android:id="@+id/movie_revenue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:text="@{Long.toString(movie.revenue)}"
                app:layout_constraintStart_toEndOf="@id/txt_revenue"
                app:layout_constraintTop_toBottomOf="@id/movie_budget" />


            <TextView
                android:id="@+id/txt_overview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/txt_overview"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/guide_start"
                app:layout_constraintTop_toBottomOf="@id/movie_revenue" />

            <TextView
                android:id="@+id/movie_overview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:text="@{movie.overview}"
                app:layout_constraintEnd_toEndOf="@id/guide_overview_end"
                app:layout_constraintStart_toStartOf="@id/guide_overview_start"
                app:layout_constraintTop_toBottomOf="@id/txt_overview" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>


